# acre-playwright

./: README.md  releases.md  setup.cfg
src/acre/playwright/: __init__.py  browser.py  setup.py  smartlocator.py
src/acre/playwright/controls/: Control.py  DataDefinition.py  Input.py  Link.py  XPControl.py  __init__.py  controls.yml
src/acre/playwright/hooks/: autobrowser.py  playwright.py
src/acre/playwright/steps/: basic.py
