[metadata]
name = acre-playwright
version = 0.1.0a1
description=playwright support for acre

[options.packages.find]
where=src

[options]
package_dir=
    =src
packages = find:
# packagae_data = var/**/*
include_package_data = True
install_requires =
    yaxp
    pyyaml
    junit.xml
    lxml
    playwright
    DevOpsAPI>=0.1.1
    configobj
    pylogx>=1.0.0

[options.package_data]
acre = 
    playwright/controls/*.yml
    
[bdist_wheel]
universal=1
